devops/k8s/st/proxy/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sos-proxy-st
  labels:
    name: sos-proxy-st
